@@ -243,12 +243,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18</version>
                 <configuration>
-                    <!--
-                    <argLine>-XX:+UseConcMarkSweepGC -Xmx8192m -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.port=10000 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Djava.rmi.server.hostname=192.168.0.199 -Djava.net.preferIPv4Stack=true</argLine>
-            <useSystemClassLoader>false</useSystemClassLoader>
-                    <forkCount>0</forkCount>
-            <useManifestOnlyJar>false</useManifestOnlyJar>
-                    -->
+                    <classpathDependencyExcludes>
+                        <classpathDependencyExcludes>c3p0:c3p0:jar:0.9.1.1</classpathDependencyExcludes>
+                    </classpathDependencyExcludes>
                 </configuration>
             </plugin>
             <plugin>
